Added more period options

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                                 <option value="0" selected disabled>Selecione o período</option>
                                 <option value="12">1 Ano</option>
                                 <option value="24">2 Anos</option>
+                                <option value="36">3 Anos</option>
+                                <option value="48">4 Anos</option>
+                                <option value="60">5 Anos</option>
                             </select>
                         </label>
                     </div>
